--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.js",
-    "serve": "webpack-dev-server --config webpack.dev.js"
+    "serve": "webpack-dev-server --config webpack.dev.js",
+    "dll": "webpack --config webpack.dll.config.js"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +26,9 @@
     "@babel/plugin-proposal-decorators": "^7.7.4",
     "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
     "@babel/runtime": "^7.7.7",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "autoprefixer": "^9.7.3",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
@@ -41,11 +44,15 @@
     "postcss": "^7.0.25",
     "postcss-load": "^0.1.6",
     "postcss-loader": "^3.0.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.1.1",
     "terser-webpack-plugin": "^2.3.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^3.0.0",
     "vue": "^2.6.11",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-merge": "^4.2.2"
   }
