--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.js",
-    "serve": "webpack-dev-server --config webpack.dev.js",
+    "serve": "webpack-dev-server --mode development --config webpack.dev.js",
     "dll": "webpack --config webpack.dll.config.js"
   },
   "keywords": [],
@@ -30,6 +30,7 @@
     "@babel/runtime": "^7.7.7",
     "add-asset-html-webpack-plugin": "^3.1.3",
     "autoprefixer": "^9.7.3",
+    "axios": "^0.19.1",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.0",
@@ -53,6 +54,7 @@
     "url-loader": "^3.0.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.8.3",
+    "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.11",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-dev-middleware": "^3.7.2",
