pre:配置打包环境

--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.prod.js",
-    "serve": "webpack-dev-server --mode development --config webpack.dev.js",
+    "serve": "cross-env BUILD_ENV=dev webpack-dev-server --config webpack.dev.js",
+    "build:test": "cross-env BUILD_ENV=prod:test webpack --config webpack.prod.js",
+    "build:pre": "cross-env BUILD_ENV=prod:pre webpack --config webpack.prod.js",
+    "build:uat": "cross-env BUILD_ENV=prod:uat webpack --config webpack.prod.js",
+    "build": "cross-env BUILD_ENV=pro webpack --config webpack.prod.js",
     "dll": "webpack --config webpack.dll.config.js"
   },
   "keywords": [],
@@ -33,10 +36,12 @@
     "axios": "^0.19.1",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^6.0.3",
     "css-loader": "^3.4.0",
     "file-loader": "^5.0.2",
     "html-withimg-loader": "^0.1.16",
     "jquery": "^3.4.1",
+    "js-cookies": "^1.0.4",
     "merge": "^1.2.1",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.24.0",
