--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "cross-env BUILD_ENV=dev webpack-dev-server --config webpack.dev.js",
     "build:test": "cross-env BUILD_ENV=prod:test webpack --config webpack.prod.js",
-    "build:pre": "cross-env BUILD_ENV=prod:pre webpack --config webpack.prod.js",
     "build:uat": "cross-env BUILD_ENV=prod:uat webpack --config webpack.prod.js",
-    "build": "cross-env BUILD_ENV=pro webpack --config webpack.prod.js",
-    "dll": "webpack --config webpack.dll.config.js"
+    "build": "cross-env BUILD_ENV=pro webpack --config webpack.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -38,10 +36,11 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^6.0.3",
     "css-loader": "^3.4.0",
+    "element-ui": "^2.12.0",
     "file-loader": "^5.0.2",
     "html-withimg-loader": "^0.1.16",
     "jquery": "^3.4.1",
-    "js-cookies": "^1.0.4",
+    "js-cookie": "^2.2.1",
     "merge": "^1.2.1",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.24.0",
@@ -50,6 +49,7 @@
     "postcss": "^7.0.25",
     "postcss-load": "^0.1.6",
     "postcss-loader": "^3.0.0",
+    "qs": "^6.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "sass-loader": "^8.0.0",
